# workflow-automation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Scaling Plan.md  docker-compose.yml  pyproject.toml  workflow automation.postman_collection.json
.github/workflows/: ci.yml
app/: api.py  api_v1.py  api_v2.py  crud.py  engine.py  legacy_storage.py  main.py  models.py  session.py  storage.py  workflow_service.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: runs.py  trigger.py  workflows.py
app/cache/: redis_cache.py
app/connector/: base.py  delay.py  enum.py  factory.py  webhook.py
app/core/: config.py
app/db/: session.py
app/db/models/: health.py  run.py  workflow.py
app/messaging/: events.py  kafka.py
app/repositories/: health.py  run.py  workflow.py
app/repository/: workflow_repository.py  workflow_run_repository.py
app/schemas/: common.py  run.py  workflow.py
app/services/: workflow.py
app/storage/: base.py  db_storage.py  enum.py  factory.py  file_storage.py  in_memory.py
app/worker/: main.py
benchmarks/: Dockerfile  regression_test.py  requirements.txt
docs/: load-capacity-report.md  scaling-strategy.md  stress-testing-report.md
infrastructure/nginx/: nginx.conf
infrastructure/pgbouncer/: pgbouncer.ini
rust-app/: Cargo.toml  Dockerfile  README.md
rust-app/src/: lib.rs
rust-app/src/api/: deps.rs  mod.rs
rust-app/src/api/v1/: mod.rs  router.rs
rust-app/src/api/v1/endpoints/: mod.rs  runs.rs  trigger.rs  workflows.rs
rust-app/src/cache/: redis_cache.rs
rust-app/src/connector/: base.rs  delay.rs  factory.rs  mod.rs  webhook.rs
rust-app/src/core/: config.rs
rust-app/src/db/: session.rs
rust-app/src/db/models/: health.rs  mod.rs  run.rs  workflow.rs
rust-app/src/messaging/: events.rs  kafka.rs  mod.rs
rust-app/src/repositories/: health.rs  run.rs  workflow.rs
rust-app/src/schemas/: common.rs  mod.rs  run.rs  workflow.rs
rust-app/src/services/: workflow.rs
rust-app/src/storage/: base.rs  db_storage.rs  mod.rs
tests/: test_messaging.py  test_storage_filesystem.py  test_storage_inmemory.py  test_storage_postgres.py  test_worker.py  test_workflow.py
